k8s/environments/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mot-eggs-service
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: mot-eggs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
  loadBalancerSourceRanges:
    - 0.0.0.0/0
