k8s/environments/production/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mot-eggs-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  # - port:
  #     number: 80
  #     name: http
  #     protocol: HTTP
  #   hosts:
  #   - "mot-eggs.prod.goautonomous.ai"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-ingressgateway-certs # must be the same as secret
      httpsRedirect: true
    hosts:
    - "mot-eggs.prod.goautonomous.ai"
